--- a/public/index.html
+++ b/public/index.html
@@ -25,13 +25,13 @@
 
     <!-- CSS 
     ================================================== -->
-    <link rel="stylesheet" href="http://localhost:3000/assets/css/style.css">
-    <link rel="stylesheet" href="http://localhost:3000/assets/css/uikit.css">
-    <link rel="stylesheet" href="http://localhost:3000/assets/css/uikit.css">
+    <link rel="stylesheet" href="https://devbook-front.herokuapp.com/assets/css/style.css">
+    <link rel="stylesheet" href="https://devbook-front.herokuapp.com/assets/css/uikit.css">
+    <link rel="stylesheet" href="https://devbook-front.herokuapp.com/assets/css/uikit.css">
 
     <!-- icons
     ================================================== -->
-    <link rel="stylesheet" href="http://localhost:3000/assets/css/icons.css">
+    <link rel="stylesheet" href="https://devbook-front.herokuapp.com/assets/css/icons.css">
     <script src="../../kit.fontawesome.com/815e388c50.js" crossorigin="anonymous"></script>
     <!-- <script src="node_modules/fuse.js/dist/fuse.js" crossorigin="anonymous"></script> -->
 
