--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Simplest is - Professional A unique and beautiful collection of UI elements">
-    <link rel="icon" href="http://localhost:3000/assets/images/favicon.png">
+    <link rel="icon" href="https://devbook-front.herokuapp.com/assets/images/favicon.png">
 
     <!-- CSS 
     ================================================== -->
@@ -221,8 +221,8 @@ body {
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="http://localhost:3000/assets/js/uikit.js"></script>
+    <script src="https://devbook-front.herokuapp.com/assets/assets/js/uikit.js"></script>
     <!-- <script src="assets/js/jquery-3.3.1.min.html"></script> -->
-    <script src="http://localhost:3000/assets/js/simplebar.js"></script>
+    <script src="https://devbook-front.herokuapp.com/assets/assets/js/simplebar.js"></script>
   </body>
 </html>
