--- a/public/index.html
+++ b/public/index.html
@@ -221,8 +221,8 @@ body {
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="https://devbook-front.herokuapp.com/assets/assets/js/uikit.js"></script>
+    <script src="https://devbook-front.herokuapp.com/assets/js/uikit.js"></script>
     <!-- <script src="assets/js/jquery-3.3.1.min.html"></script> -->
-    <script src="https://devbook-front.herokuapp.com/assets/assets/js/simplebar.js"></script>
+    <script src="https://devbook-front.herokuapp.com/assets/js/simplebar.js"></script>
   </body>
 </html>
